--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.27",
+    "@nextui-org/card": "^2.0.24",
+    "@nextui-org/input": "^2.1.17",
+    "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
     "autoprefixer": "^10.4.18",
     "framer-motion": "^11.0.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
