fix: granted write permission to the actions gh pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
           path: ./dist
 
   deploy:
+    permission:
+      contents: write
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
