fix: fixed permissoins spelling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           path: ./dist
 
   deploy:
-    permission:
+    permissions:
       contents: write
     name: Deploy
     needs: build
